--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
+        "@vue/compiler-sfc": "^3.2.36",
         "axios": "^0.21",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
@@ -20,7 +21,11 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
-        "vue-loader": "^15.9.7",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "autoprefixer": "10.4.5",
+        "vue-router": "^3.5.4"
     }
 }
