--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "autoprefixer": "10.4.5",
+        "jquery": "^3.6.0",
         "vue-router": "^3.5.4"
     }
 }
