--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.6.12",
+        "vuex": "^3.6.0"
     },
     "dependencies": {
         "autoprefixer": "10.4.5",
+        "element-ui": "2.15.6",
         "jquery": "^3.6.0",
-        "vue-router": "^3.5.4"
+        "vue-i18n": "^8.27.2",
+        "vue-router": "^3.5.4",
+        "vuex-persistedstate": "^3.2.1"
     }
 }
