--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jquery": "^3.6.0",
         "vue-i18n": "^8.27.2",
         "vue-router": "^3.5.4",
+        "vue2-google-maps": "^0.10.7",
         "vuex-persistedstate": "^3.2.1"
     }
 }
